<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_name">Journal Doodle</string>
    <string name="action_settings">My Settings</string>
    <string name="action_share">Share</string>
    <string name="action_actualiser">Actualise</string>
    <string name="action_apropos">About</string>
    <string name="action_send">Send a new</string>
    <string name="action_deconnexion">Disconnect</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_year_label">Year</string>
    <string name="pref_year_key" translatable="false" >Annee</string>
    <string name="pref_year_default" translatable="false" >2018</string>
    <string name="pref_month_label">Month Note</string>
    <string name="pref_month_key" translatable="false" >Mois</string>
    <string name="pref_month_default" translatable="false">1</string>
    <string name="pref_telephone_label">Phone</string>
    <string name="pref_telephone_key" translatable="false">Telephone</string>
    <string name="pref_telephone_default" translatable="false">00000</string>
    <string name="pref_operateur_label">Operator</string>
    <string name="pref_operateur_key" translatable="false">Operateur</string>
    <string name="pref_operateur_default" translatable="false">mtn</string>
    <string name="pref_nom_label">Last Name</string>
    <string name="pref_nom_key" translatable="false">Nom</string>
    <string name="pref_nom_default" translatable="false">Journal</string>
    <string name="pref_prenom_label">First Name</string>
    <string name="pref_prenom_key" translatable="false">Prenom</string>
    <string name="pref_prenom_default" translatable="false">Note</string>
    <string name="pref_matricule_label">Matricule</string>
    <string name="pref_matricule_key" translatable="false">Matricule</string>
    <string name="pref_matricule_default" translatable="false">Cameroun</string>
    <string name="pref_email_label">Email</string>
    <string name="pref_email_key" translatable="false">Email</string>
    <string name="pref_email_default" translatable="false">defaultmail@fouomene.com</string>
    <string name="pref_isdelegue_label">Delegue</string>
    <string name="pref_isdelegue_key" translatable="false">IsDelegue</string>
    <string name="pref_isdelegue_default" translatable="false">false</string>
    <string name="pref_isadmin_label">Admin</string>
    <string name="pref_isadmin_key" translatable="false">IsAdmin</string>
    <string name="pref_isadmin_default" translatable="false">false</string>
    <string name="pref_position_label">position</string>
    <string name="pref_position_key" translatable="false">position</string>
    <string name="pref_position_default" translatable="false">0</string>
    <string name="pref_intervalle_label">intervalle</string>
    <string name="pref_intervalle_key" translatable="false">intervalle</string>
    <string name="pref_intervalle_default" translatable="false">900</string>
    <string name="pref_motcle_label">motcle</string>
    <string name="pref_motcle_key" translatable="false">motcle</string>
    <string name="pref_motcle_default" translatable="false">vide</string>
    <string name="pref_monmotcle_label">My search keyword</string>
    <string name="pref_monmotcle_key" translatable="false">monmotcle</string>
    <string name="pref_monmotcle_default" translatable="false">vide</string>
    <string name="pref_APIURL_label" translatable="false">APIURL</string>
    <string name="pref_APIURL_key" translatable="false">APIURL</string>
    <string name="pref_APIURL_default" translatable="false">http://freelancertech.net/taxi/web/taxiapp/taximen/</string>
    <string name="pref_urlApiInfosFlash_label" translatable="false">urlApiInfosFlash</string>
    <string name="pref_urlApiInfosFlash_key" translatable="false">urlApiInfosFlash</string>
    <string name="pref_urlApiInfosFlash_default" translatable="false">http://37.187.88.37:8080/journalapp/api</string>
    <string name="pref_urlserveurimage_label" translatable="false">urlserveurimage</string>
    <string name="pref_urlserveurimage_key" translatable="false">urlserveurimage</string>
    <string name="pref_urlserveurimage_default" translatable="false">http://freelancertech.net</string>
    <string name="pref_urlsendnotificationpush_label" translatable="false">urlsendnotificationpush</string>
    <string name="pref_urlsendnotificationpush_key" translatable="false">urlsendnotificationpush</string>
    <string name="pref_urlsendnotificationpush_default" translatable="false">http://fouomene.com/journal/push_notification.php</string>
    <string name="pref_urlregisternotification_label" translatable="false">urlregisternotification</string>
    <string name="pref_urlregisternotification_key" translatable="false">urlregisternotification</string>
    <string name="pref_urlregisternotification_default" translatable="false">http://fouomene.com/journal/register.php</string>
    <string name="pref_versionurl_label" translatable="false">versionurl</string>
    <string name="pref_versionurl_key" translatable="false">versionurl</string>
    <string name="pref_versionurl_default" translatable="false">0</string>
    <string name="sync_account_type">journal.freelancertech.net</string>
    <string name="content_authority">net.freelancertech.journal.app</string>
    <string name="textload">Subject</string>
    <string name="textmessage">News</string>
    <string name="nodoodlefound">No New Found This Month</string>
    <string name="format_notification"> <xliff:g id="title">%1$s</xliff:g> Date: <xliff:g id="rundate">%2$s</xliff:g></string>
    <string name="pref_last_notification">last_notification</string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Auto Notification</string>
    <string name="pref_enable_notifications_true">Activate</string>
    <string name="pref_enable_notifications_false">Disable</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="title_activity_login">Journal Doodle</string>
    <string name="title_activity_send">Add Note </string>
    <string name="logintel_activity_sabonner"><u>Register</u></string>
    <string name="notify"> New(s) Journal Doodle</string>
    <string name="motdepasse">Password :</string>
    <string name="login">Login</string>
    <string name="suivant">Next</string>
    <string name="abonner">Subscribe</string>
    <string name="numerotelephone">Enter your mobile phone number</string>
    <string name="addressemail">Enter your email</string>
    <string name="slogan">And news come to you...</string>
    <string name="message">Compose your note* :</string>
    <string name="objet">Note TiTle* :</string>
    <string name="objetmajuscule">NOTE TITLE :</string>
    <string name="messagemauscule">DETAIL :</string>
    <string name="date">DATE :</string>
    <string name="detail">DETAIL :</string>
    <string name="login_activity_message1">Please enter your Email and Password!!</string>
    <string name="login_activity_message2">Unknown email !!</string>
    <string name="login_activity_message3">Please enter your Password !!</string>
    <string name="login_activity_message4">The Email don\'t match!</string>
    <string name="main_activity_message1">Sorry, you are not allowed.</string>
    <string name="main_activity_message2">Account deleted !!</string>
    <string name="send_activity_message2">Note successfully save !!</string>
    <string name="send_activity_message5">Please enter the title and body !!</string>
    <string name="system_message_internet">Your internet connection is very slow, check and try again !!</string>
    <string name="system_message_server">Server Unavailable at the moment!!!</string>
    <string name="system_message_internet2">No Internet connexion</string>
    <string name="system_message_internet3">Could not display comments, No Internet connexion</string>
    <string name="photo_message_internet1">Error during update, Remote Server Unavailable at the moment!!!</string>
    <string name="photo_message_internet2">Starting Update</string>
    <string name="photo_message_internet3">You must select a picture in the gallery before the update !</string>
    <string name="photo_message_internet4">You haven\'t select a picture !</string>
    <string name="photo_message_internet5">Something went wrong !</string>
    <string name="photo_message_internet6">Call the transferred!</string>
    <string name="photo_message_internet7">Update Ongoing...</string>
    <string name="photo_message_internet8">Update Completed !</string>
    <string name="incscription_activity_infoetudiant">Information</string>
    <string name="inscription_activity_pays">Coundry*</string>
    <string name="inscription_activity_telephone">Mobile Phone Number*</string>
    <string name="inscription_activity_telephone_operateur">Your phone number operator*</string>
    <string name="inscription_activity_nom">Name*</string>
    <string name="inscription_activity_prenom">First Name*</string>
    <string name="inscription_activity_matricule">Matricule*</string>
    <string name="inscription_activity_email">Email*</string>
    <string name="inscription_activity_motdepasse">Password*</string>
    <string name="inscription_activity_confirmermotdepasse">Repeat Password*</string>
    <string name="inscription_activity_enregister">Save</string>
    <string name="inscription_activity_annuler">Cancel</string>
    <string name="inscription_activity_select_pays">Select your country</string>
    <string name="inscription_activity_message7">Please select or enter all mandatory fields!!</string>
    <string name="inscription_activity_message8">Password mistmatch!!</string>
    <string name="inscription_activity_message9">Wrong mobile phone format</string>
    <string name="inscription_activity_message10">Subscription Completed,</string>
    <string name="inscription_activity_message11">Welcome</string>
    <string name="inscription_activity_message12">Sorry, but this e-mail address is invalid !!</string>
    <string name="titlebar_main_activity">List of notes</string>
    <string name="inscription_activity_titlebar">Registration</string>
    <string name="detail_activity_titlebar">Detail</string>
    <string name="send_activity_titlebar">Add note</string>
    <string name="titleabonner">Field : (*)required.</string>
<string name="profil_activity_titlebar">My Profile</string>
    <string name="detail_profil_activity_titlebar">Detail Profile</string>
    <string name="pays_activity_titlebar">Select your country</string>
    <string name="profil_activity_message1">Profile picture</string>
    <string name="profil_activity_message3">Unable to change your phone number. To change your phone number, delete your account and re-create your account with the new number.</string>
    <string name="editer">Edit</string>
    <string name="edition">EDITION</string>
    <string name="newvalue">New Value</string>
    <string name="nav_libelle_compte">Account</string>
    <string name="nav_libelle_help">Help and Rule</string>
    <string name="commenter_information">Comment</string>
    <string name="votre_commentaire">Enter your comment:</string>
    <string name="actuliser_commentaire">Refresh comments</string>
    <string name="commentaires">COMMENTS :</string>
    <string name="joindre">Attach a picture</string>
    <string name="url">URL</string>
    <string name="inscription_activity_lire">Read*</string>
    <string name="inscription_activity_termes"><u>Terms and Conditions of Use</u></string>
    <string name="inscription_activity_accepte">Yes I read and I accept the terms and conditions.</string>
</resources>