<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:background="@drawable/arbleu">

        <include layout="@layout/tool_bar" />

        <!-- Master layout. -->
        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_gravity="top"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:gravity="center_vertical"
                android:layout_gravity="top"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:background="#c8ffffff"
                android:weightSum="1">

                <TextView
                        android:id="@+id/objet_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:text="@string/objet"
                        />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/objet_editText" />

                <TextView
                    android:id="@+id/message_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:text="@string/message"
                    />

                <LinearLayout
                    android:gravity="center_vertical"
                    android:layout_gravity="top"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="6dp"
                    >

                    <ImageView
                        android:id="@+id/emoji_send_btn"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="4dp"
                        android:src="@drawable/smiley"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        />

                    <hani.momanii.supernova_emoji_library.Helper.EmojiconEditText
                        android:id="@+id/message_editText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:ems="10"
                        android:layout_weight="7"
                        android:scrollbars="vertical"
                        android:layout_marginBottom="10dp"/>



                </LinearLayout>

                <TextView
                    android:id="@+id/url_titre_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:text="@string/url"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/url_editText" />

                <Button
                    android:id="@+id/fichier_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/joindre"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="#000000"
                    android:minHeight="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/commentaire"/>

                <net.freelancertech.journal.app.custom.ProportionalImageView
                    android:id="@+id/fichierjoint_imageview"
                    android:layout_width="232dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:id="@+id/label_geo_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/titleabonner"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textSize="18sp" />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inscription_activity_enregister"
                    android:id="@+id/send_button"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:background="@drawable/button_boarder_blue"
                    android:textColor="#000000"
                    android:minHeight="40dp"/>


            </LinearLayout>

        </LinearLayout>

        </ScrollView>

    </LinearLayout>


</android.support.v4.widget.DrawerLayout>

